Set zero opacity only on html5 inputs that are radio and checkbox that are in Input. Fixes bug where checkboxes were invisible in the Table component.

--- a/packages/react-atlas-default-theme/src/Checkbox/Checkbox.css
+++ b/packages/react-atlas-default-theme/src/Checkbox/Checkbox.css
@@ -29,7 +29,7 @@
 
 .disabled {
   opacity: 0.65;
-  composes: cursor-not-allowed from '../styles.css'; 
+  composes: cursor-not-allowed from '../styles.css';
   pointer-events: none;
 }
 
@@ -50,7 +50,7 @@
   height: 10px;
   transform: rotate(45deg);
   border: solid #fff;
-  border-width: 0 3px 3px 0;    
+  border-width: 0 3px 3px 0;
 }
 
 .error {
@@ -71,12 +71,14 @@
   cursor: pointer;
   white-space: nowrap;
   padding-right:5px;
+  margin-left: 12px;
 }
 
 /* label text */
 .label_left {
   composes: label;
   padding-right: 2px;
+  margin-left: 0px;
 }
 
 .error_text {
