--- a/packages/react-atlas-default-theme/src/Input/input.css
+++ b/packages/react-atlas-default-theme/src/Input/input.css
@@ -2,7 +2,8 @@
 	margin-top: 10px;
 	clear: both;
 }
-input[type="checkbox"], input[type="radio"] {
+
+input.opacity[type="checkbox"], input.opacity[type="radio"] {
 	opacity: 0;
 }
 .input {
@@ -65,7 +66,7 @@ input[type="checkbox"], input[type="radio"] {
   	outline: none;
   	-webkit-box-shadow: 0 0 1px 1px rgba(0, 0, 0, .05), 0 0 3px 1px rgba(234, 15, 67, .4);
           	box-shadow: 0 0 1px 1px rgba(0, 0, 0, .05), 0 0 3px 1px rgba(234, 15, 67, .4);
-	
+
 }
 
 .disabled {
